Bug 166879 - RTF export: lost section break after Writer section
Summary: RTF export: lost section break after Writer section
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords: bibisected, bisected
: 116753 (view as bug list)
Depends on:
Blocks: RTF Section
  Show dependency treegraph
 
Reported: 2025-06-06 11:07 UTC by Miklos Vajna
Modified: 2025-06-12 12:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (189 bytes, application/rtf)
2025-06-06 11:07 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-06-06 11:07:21 UTC
Created attachment 201119 [details]
Minimal reproducer

Steps to reproduce the problem:

1) Open the attached document

2) Save as RTF

3) Reload

Expected result: still 2 pages

Actual result: 1 page
Comment 1 Timur 2025-06-11 14:27:36 UTC
This was changed in 4.0 in range https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=3d4288c1c0b593421c7f6619c88584bdb7c53337..4026e1824de8ff9b5d006ae6eba491f91bc4e599.
Went from 2 vertival pages to 1. So it was not good either but still better.
Likely https://cgit.freedesktop.org/libreoffice/core/commit/?id=b836bf389d1150c9cafbb0aefa641af2316e536c .

Fixing this one also fixes bug 116753, can close or mark as dupe.
Comment 2 Commit Notification 2025-06-11 15:35:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/264ed42fd66359d8d92f6ef22d9c757514ffb4a3

tdf#166879 RTF export: handle section break right after a section

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-06-12 06:24:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/10196214e11427802987f9d4d0a8100a76e15e08

tdf#166879 RTF export: handle section break right after a section

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2025-06-12 06:24:52 UTC
Timur: I'm closing this, could you please close the other one as duplicate if the same fix resolves that, too? Thanks.
Comment 5 Timur 2025-06-12 06:39:11 UTC
*** Bug 116753 has been marked as a duplicate of this bug. ***